--- a/scss/styles.css
+++ b/scss/styles.css
@@ -510,3 +510,153 @@ footer {
   #companyLogo {
     padding-top: 18px; } }
 /* end of media query */
+
+
+
+/*///////////////////////////*/
+
+
+
+/* Carousel/Hope Page Styling */
+
+#button-wrapper {
+  display: flex;
+  justify-content: space-around;
+  width: 500px;
+  height: 200px;
+  padding-top: 20px;
+  margin: auto;
+  z-index: -1;
+  text-align: center;
+}
+#button-wrapper p {
+  margin-left: -9px;
+  margin-right: -9px;
+  margin-top: 100px;
+  z-index: 1000;
+}
+#search-button {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(192, 192, 192, 0.432);
+}
+#download-button {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(192, 192, 192, 0.432);
+}
+#search-button:hover {
+  background-color: rgba(192, 192, 192, 0.616);
+}
+#download-button:hover {
+  background-color: rgba(192, 192, 192, 0.616);
+}
+
+* {box-sizing:border-box}
+
+.carouselImg {
+  max-height: 400px;
+}
+@media only screen and (max-width: 700px) {
+  .carouselImg {
+    max-height: 300px;
+  }
+}
+
+
+/* Slideshow container */
+.slideshow-container {
+max-width: 800px;
+position: relative;
+margin: auto;
+margin-top: 3%;
+z-index: -1;
+}
+
+/* Hide the images by default */
+.mySlides {
+display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+cursor: pointer;
+position: absolute;
+top: 50%;
+width: auto;
+margin-top: -22px;
+padding: 16px;
+color: white;
+font-weight: bold;
+font-size: 18px;
+transition: 0.6s ease;
+border-radius: 0 3px 3px 0;
+user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+right: 0;
+border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+color: #f2f2f2;
+font-size: 24px;
+padding: 8px 12px;
+position: absolute;
+bottom: 8px;
+width: 100%;
+text-align: center;
+background-color: rgba(114, 114, 114, 0.411);
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+color: #f2f2f2;
+font-size: 12px;
+padding: 8px 12px;
+position: absolute;
+top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+cursor: pointer;
+height: 15px;
+width: 15px;
+margin: 0 2px;
+background-color: #bbb;
+border-radius: 50%;
+display: inline-block;
+transition: background-color 0.6s ease;
+z-index: -1;
+}
+
+.active, .dot:hover {
+background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+-webkit-animation-name: fade;
+-webkit-animation-duration: 1.5s;
+animation-name: fade;
+animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+from {opacity: .4}
+to {opacity: 1}
+}
+
+@keyframes fade {
+from {opacity: .4}
+to {opacity: 1}
+}
